updated at: 2023-07-31 19:43, あっくん大魔王専用杖 - テルキ堂(Terukidou) - BOOTH

--- a/VRChat/16/1087916.html
+++ b/VRChat/16/1087916.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "jja4i0CUvIufYFtgPPvdl5XVww/9OMC7n0OHmhG+/Ys="></script>
+    "uh1m/6XDtHAg4qhscCvoFwMhZbjs2WqAXNrMC7B04yI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"あっくん大魔王専用杖","description":"VRChat対応アイテム「あっくん大魔王専用杖」\n\n\n動く城のフィオ様より企画されました\nVlend発足　企画第一弾：デザインコンペ\n「もしも！あのVtuberが武器を持ったら？」にて、\nあっくん大魔王様の杖のデザインを担当させて頂きました。\n\nポリゴン数：4950\n\nCubed's unity shader使用\n\nunitypackage：有\n\n\nあっくん大魔王様に撮影のご協力を頂き、\n本商品を手に取ってもらった写真を掲載させて頂いております。\n\nまた、撮影会場はマッスン様の自作アバター交流会の会場をお借りし、撮影させて頂きました。\n\nそして、本商品をマッスン様主催の次回自作アバター交流会にて展示して頂けることになりましたので、是非ご覧ください。\n\nhttps://twitter.com/massun_nico/status/1061542579735453696\n詳細は↑にて。\n\n＜アップデート＞\n2018.11.12\n杖の装飾に使われているルーンの部分が回転し続けるアニメーションを追加しました。\n\n導入方法については添付の画像をご参照をお願いします。\n（杖アニメ導入方法.png）\n","url":"https://booth.pm/ja/items/1087916","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1500"},"image":"https://booth.pximg.net/c/620x620/a2bf9907-a323-492b-a7ce-a665215736f7/i/1087916/fb5e9489-e0aa-4923-b6fa-f1c2aaedffa7_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="jja4i0CUvIufYFtgPPvdl5XVww/9OMC7n0OHmhG+/Ys="></script>
+    nonce="uh1m/6XDtHAg4qhscCvoFwMhZbjs2WqAXNrMC7B04yI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -621,9 +621,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
