--- a/VRChat/23/1088423.html
+++ b/VRChat/23/1088423.html
@@ -79,7 +79,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "gBylrpiKcJL4ODAAuHTYjAj7SmThd4sT3yMcFKxLMd4="></script>
+    "rMB8tX9lEMyuP3Xmip7TPftvsWH5+kcJnXn3w2e0b9Y="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"メガネ","description":"普通のメガネです。\nハイポリ版と約17000ポリのローポリ版を用意してます。\n改変等は自由です。","url":"https://booth.pm/ja/items/1088423","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/dfed956f-05d3-47f6-8530-1e2fec37b36e/i/1088423/324a3ae9-6a8c-47fb-9dff-abbde9044155_base_resized.jpg"}
     </script>
@@ -93,7 +93,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="gBylrpiKcJL4ODAAuHTYjAj7SmThd4sT3yMcFKxLMd4="></script>
+    nonce="rMB8tX9lEMyuP3Xmip7TPftvsWH5+kcJnXn3w2e0b9Y="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -370,9 +370,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
