--- a/VRChat/55/1087955.html
+++ b/VRChat/55/1087955.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "XdRQPIVaYkLhwq1yIe/7XnYEWWJv2NUsMs3alP2Tft8="></script>
+    "Wj1Gog8IarpPsgkvzg9IyB9TjXcxC6CSvX9TjyQbLmQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【Vlend企画】ギアスタンプ","description":"VtuberとVcreaterのコラボ企画「Vlend　もしも！あのVtuberが武器を持ったら？」にて制作させていただいたモデルです。\nすみっこは動く城のフィオさんのお題「スチームパンキーな巨大槌」をテーマに制作しました！\n歯車グルグル回って、煙モクモク出てます。\n歯車焼印を入れたい時にご使用ください。\n","url":"https://booth.pm/ja/items/1087955","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1500"},"image":"https://booth.pximg.net/c/620x620/142a7e1a-9373-4898-920f-9482feb5132b/i/1087955/c4383084-0368-4577-a62e-6fcf6df4355e_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="XdRQPIVaYkLhwq1yIe/7XnYEWWJv2NUsMs3alP2Tft8="></script>
+    nonce="Wj1Gog8IarpPsgkvzg9IyB9TjXcxC6CSvX9TjyQbLmQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -475,9 +475,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
