--- a/VRChat/16/1087216.html
+++ b/VRChat/16/1087216.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "E0b49gXEQLI8BC1f7UYsFJDWPWW5CYTxb67HFO0rl34="></script>
+    "HkRJyaLn4jbfP81+WvoXalHbybKljiV4XSVObSO9Dzw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat用　焼き芋　414ポリゴン","description":"VRChat用の焼き芋です。新聞紙付き、ナシの2種類の.fbxモデルと湯気パーティクル付きのモデル2種のPrefabが入っています。\n\nまんまるしぇーだー1.3をお借りして同梱しています。すでに導入済みの方、他のシェーダーを利用される方はチェックを外してインポートしてください。\n\nモデルの再配布を禁止します。テクスチャの改変と、改変したテクスチャの配布は許可します。\n\nご質問、確認などありましたらリンク先のTwitterアカウントまでお知らせください。","url":"https://booth.pm/ja/items/1087216","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/64582e23-a174-480f-b05b-2d9908644c7b/i/1087216/782c2d28-a7f3-494c-8c72-6683023b1fee_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="E0b49gXEQLI8BC1f7UYsFJDWPWW5CYTxb67HFO0rl34="></script>
+    nonce="HkRJyaLn4jbfP81+WvoXalHbybKljiV4XSVObSO9Dzw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -373,9 +373,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
