updated at: 2023-07-31 19:49, スキットル - 潮だまり - BOOTH

--- a/VRChat/16/1079816.html
+++ b/VRChat/16/1079816.html
@@ -79,7 +79,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "UqA4OU3qHAUSPkEPQS5CfuH1bLHSoUR8UaEScDmcKm8="></script>
+    "Ldmp8kRhRFlYn8mX28V4d1fb3Sar4r2PmgFTkQOiY/4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"スキットル","description":"『スキットル』\n\nVRchat用ですが特に用途の制限はないので\n下記を参考にご自由にお使いください。\n\nお酒とか入れて飲む。\n蓋にボーンが入ってるので開けたり閉めたりできる。\n\nFANBOX500円プラン「400円以下のもの使い放題」プランの対象商品となります。\n\n\tNormal.png : ノーマルマップです。ノーマルマップに対応したシェーダーに入れると質感が出ます。\n\tMetallicSmoothness.png : メタリックラフネスマップです。メタリックラフネスマップに対応したシェーダーに入れると質感が出ます。\n\n作者詐称：不可\n改変：可\n商用利用；可\n再配布：不可\nアバターやワールドへの同梱：可\n\n----------------------\n\n更新履歴\n\n2018/11/04 リリース\n\n----------------------\n\n作成・配布者　siodome0","url":"https://booth.pm/ja/items/1079816","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/55d0b3cd-8d44-43f0-8467-7e99fcc0d318/i/1079816/88848015-60d1-44ca-a804-65eb4d79ca5d_base_resized.jpg"}
     </script>
@@ -93,7 +93,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="UqA4OU3qHAUSPkEPQS5CfuH1bLHSoUR8UaEScDmcKm8="></script>
+    nonce="Ldmp8kRhRFlYn8mX28V4d1fb3Sar4r2PmgFTkQOiY/4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -395,9 +395,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
