updated at: 2023-07-31 19:49, VRアバター用オリジナルモデル BattleNurse CuSith「バトルナース クーシア 」　1.1 - kokorobouzu - BOOTH

--- a/VRChat/74/1078874.html
+++ b/VRChat/74/1078874.html
@@ -76,27 +76,49 @@
     <script id="shoplist_with_items" type="text/x-template">
     <div><div class="l-cards-4cols l-cards-sp-2cols"><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" v-for="shop in visibleShops"></shop-with-items><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" closed="" v-for="shop in moreShops" v-if="moreShops &amp;&amp; moreShopsVisible"></shop-with-items></div><div @click="moreShopsVisible = true" class="ellip-btn" v-if="moreShops &amp;&amp; !moreShopsVisible">もっと見る<i class="icon-arrow-open-down s-2x no-margin"></i></div></div>
     </script>
+  </head>
+  <body>
+    <div class="mini-player-controller" style="display: none;">
+      <a class="scroller" data-smooth-scroll="true"><img class=
+      "mini-player-controller__image" src=
+      "https://asset.booth.pm/assets/thumbnail_placeholder_c_300-09027647543d43ee525b2a7fe28d5ed5a3b6069d0c596c89b21776543ed1c0fe.png"></a><a class="scroller mini-player-information"
+      data-smooth-scroll="true">
+      <div class="mini-player-information__item-name"></div>
+      <div class="mini-player-information__shop-name"></div>
+      <div class="mini-player-information__navigation">
+        試聴中の商品へスクロール
+      </div></a>
+      <div class="mini-player-controls">
+        <div class="mini-player-mode-ui">
+          <div class="mini-player-mode-ui__knob"></div>
+          <div class="mini-player-mode-ui__short">
+            15秒
+          </div>
+          <div class="mini-player-mode-ui__full">
+            フル
+          </div>
+        </div>
+        <div class="mini-player-play-ui"></div>
+      </div>
+    </div>
     <meta content="initial-scale=1.0" id="viewport" name=
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "tuJvzFoy7xqJCuQ1oQSX82W9PCOahq96KRYUSwWYaDo="></script>
+    "vTA5XD7pWDx3Ut854Ym9GIimCPWRVxSivW3yue1HCFA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRアバター用オリジナルモデル BattleNurse CuSith「バトルナース クーシア 」　1.1","description":"VR系チャット用オリジナルモデル「バトルナース クーシア 」BattleNurs CuSith\n\nオリジナルモデル「バトルナース クーシア 」期間限定セール！\nVKetに合わせ8月中半額、セットアップ済みVRC用assetです。\n\n■クーシアとは？■\n現在作成中のゲーム内に出てくる改造犬人バトルナースです。\nプレイヤーの体力を回復したり、マゾっ気のあるプレイヤーの話し相手になってくれます。\n趣味で地下の生物の研究をしており探索中に遭遇することもあり道中で遭遇した場合は行動を共にすることもある。\n普段はツンケンしているがそれは態度だけで性格は真面目、経験の浅い主人公をバカにしたような態度を取るが的確に導いてくれる。\n\n犬人系特有の習性で主人と認めたら急にデレる　カワイイ。\n\n■この服は？■\n防刃防弾性に優れた西レ社のHDケプラ繊維で作られた防御主体局地戦用看護服です。\n●特殊効果\nY染色体ヒューマノイドに対し常に30%＋の防御力。\n犬耳耐性50以下の生物に対し装甲及び防御系、確率防御系スキルを無視して絶命攻撃を発動可能。\n主人を守る場合に100％の防御力アップ。\n●特殊機能\n羽とブーツのスラスターによりジャンプ時の滞空時間を長くすることができる。\n爪部分にイルミネーション機能があり最大発光にしてライト代わりに使ったり文字を表示することが可能。\n防寒効果に優れ-50°でも運動能力を損なわず活動できる。\n●デメリット\n主人と認められていない場合敵の攻撃がすべてプレイヤーに向かう。\n夏は暑い。※下着姿になるので別に問題ない\nVRChat内では全ての機能効果はOFFになる\n\n\n■心優しき坊主とは？■\n作者です。\nツイッターでこの作品も含めたローポリ講座を不定期で開いてます、ぜひフォローしてくださいね。\nhttps://twitter.com/KoKoRoBoUZu\n\n\n以下に各バージョンの説明がありますのでよく読んでからご購入お願いします。\n※※※※※　注意　※※※※※\n衣装、コンプリート版と別れています、お間違えの無いようにお願いします。\n\n[通常版][高解像度版]はUnityAssetを読み込めばアップロードするだけで使えます。\n","url":"https://booth.pm/ja/items/1078874","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"2000","highPrice":"5500"},"image":"https://booth.pximg.net/c/620x620/e3df372d-7b3e-4861-9106-df71df45ccc4/i/1078874/951a4a93-0071-4226-b205-228997bcc625_base_resized.jpg"}
     </script>
     <link rel="shortcut icon" type="image/x-icon" href=
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
-    "apple-touch-icon-precomposed">
-  </head>
-  <body>
-    <noscript><iframe height="0" src=
-    "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
+    "apple-touch-icon-precomposed"><noscript><iframe height="0"
+    src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="tuJvzFoy7xqJCuQ1oQSX82W9PCOahq96KRYUSwWYaDo="></script>
+    nonce="vTA5XD7pWDx3Ut854Ym9GIimCPWRVxSivW3yue1HCFA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -909,9 +931,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
