updated at: 2023-07-31 19:54, （３Dモデル）ハロウィン・ケーキ - Hitsuji15 - BOOTH

--- a/VRChat/27/1072127.html
+++ b/VRChat/27/1072127.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "B22iFgO7hX6/T46v8HOc0brLFL8DLLJVw8bFGxmNqIw="></script>
+    "jOdQ1J8xwH+ocZCs1LMfG4BaCv0+Ju4+K2vJnOjzjLM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"（３Dモデル）ハロウィン・ケーキ","description":"ハロウィン風のケーキです。(▲7,032)\n\nvtuberのハロウィン動画や、\nVRChatその他での賑やかしにご利用ください。\n\n【内容物説明】\nHalloween.fbx : ハロウィン・ケーキのfbxです。\nHalloweenTex.png : テクスチャです。\nReadme.txt : 説明書です。\n\n※ アラザンだけ別オブジェクトです。光沢のあるマテリアルを適用してあげてください。\n\n【ご利用について】\n改変：可\n商用利用：可\n作者詐称：不可\n再配布、本データを含めた販売：不可\nVRChatなどで使用するアバターやペデスタル、ワールドへの同梱：可\n\n【免責事項】\nモデル製作者は当モデルデータを利用したことにより発生した損害、損失、その他の不利益に対して一切の責任を負いません。\n\n※ 見本画像でユニティちゃんトゥーンシェーダーを使用しております（１枚目）。\n\n↓使用例↓","url":"https://booth.pm/ja/items/1072127","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/18b0699d-c344-4832-a9f1-66695f5c053b/i/1072127/3e1622b7-5c02-4ddf-89bc-258d6e967601_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="B22iFgO7hX6/T46v8HOc0brLFL8DLLJVw8bFGxmNqIw="></script>
+    nonce="jOdQ1J8xwH+ocZCs1LMfG4BaCv0+Ju4+K2vJnOjzjLM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -391,9 +391,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
