updated at: 2023-07-31 19:56, 【VRchatAvatar】Ayana【制服冬服ver】 - ig_kのお店♪ - BOOTH

--- a/VRChat/40/1068940.html
+++ b/VRChat/40/1068940.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "D5G7WW6jY1TiIJBIaCdVNbdU90iWd+mfsQQV/yk35TA="></script>
+    "3fwkEB99cB79sW0FrvG4QieI52m88LbdTatHhrFJdEw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRchatAvatar】Ayana【制服冬服ver】","description":"オリジナル3Dモデル「Ayana」紹介\n\nVRchatを想定した3DCGモデルです。\nその他、ゲーム、アニメーション、配信等もOKです。\nVRchat用のリップシンク、まばたき以外にも、複数モーフを作成しています。\n改変もどんどん行って頂いて大丈夫です。\nまた、頭部を別のモデルに代えて、衣装として使用して頂てもかませいません。\n\nアイトラッキング対応済み\nフルトラッキングは対応しておりますが、環境がないためテストはしておりません。\nIdleアニメーション付きです！\nデスクトップの方にもおすすめです！\n\n利用条件は当データの再配布と販売以外はほぼ何をして頂いてもかまいませんので、よかったら楽しんでやってください！","url":"https://booth.pm/ja/items/1068940","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/59389fe7-f5ec-46ed-8ba3-90b7d78a625e/i/1068940/a483fe26-2522-4102-ab90-889d022a066c_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="D5G7WW6jY1TiIJBIaCdVNbdU90iWd+mfsQQV/yk35TA="></script>
+    nonce="3fwkEB99cB79sW0FrvG4QieI52m88LbdTatHhrFJdEw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -484,9 +484,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
