updated at: 2023-07-31 19:56, 藤のかんざしの3Dモデル（△1058ポリゴン）【VRChat使用可、オリジナル3Dモデル】 - wakamaru shop - BOOTH

--- a/VRChat/83/1335983.html
+++ b/VRChat/83/1335983.html
@@ -82,7 +82,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "8S0uSJfz1rHae4+MJ62M+cILYkXURFnr/cD+WHSjEvc="></script>
+    "h+owrz3xnZuYigu4ThfS6FnlnBThuvzZrNU57mOHg5Q="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"藤のかんざしの3Dモデル（△1058ポリゴン）【VRChat使用可、オリジナル3Dモデル】","description":"藤のかんざしの3Dモデル（△1058ポリゴン）です。\n\nかんざし部分と藤部分を別々に動かせるようにボーンを設定しました。ボーンの角度を変更することでお好みの角度で固定できます。DynamicBoneを導入することで藤だけを揺らすこともできます。\n\nUnityPackage内のPrefabsフォルダに、画像のように見える設定をしたPrefabを作ってあります。\nまた、Arktoon-Shadersを同梱しました。\nもし他のシェーダーに変更される場合は、メッシュの裏面描画とPNGデータの透明部分を利用できるシェーダーをお使いください。\nDynamicBoneも設定してあります。お好みの揺れ方に調整してください。\n\n---------------------------------------------------------------\nファイルの中身\n・Kanzashi_Fuji.unitypackage\n・Kanzashi_Fuji.fbx（△1058ポリゴン）\n・Kanzashi_Albedo.png\n・Kanzashi_Metallic.png\n・Kanzashi_Normal.png\n\nテクスチャデータはサイズ2048で制作しました。\nsampleシーンはunity version 2017.4.15f1で制作しました。\n\n改変自由。\n3Dモデルデータとして使える状態での再配布禁止。\nゲーム、映像作品などで使うことができます。商用可。\n誹謗中傷、違法行為への使用を禁止します。","url":"https://booth.pm/ja/items/1335983","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/ba1632d1-d7a2-47bf-b5c7-b1b4c83290fc/i/1335983/0603f4e3-f978-4383-8351-98f143668b0d_base_resized.jpg"}
     </script>
@@ -96,7 +96,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="8S0uSJfz1rHae4+MJ62M+cILYkXURFnr/cD+WHSjEvc="></script>
+    nonce="h+owrz3xnZuYigu4ThfS6FnlnBThuvzZrNU57mOHg5Q="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -471,9 +471,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
