updated at: 2023-07-31 20:07, VRCで使えるただの帽子 - 店長のがらくた屋 - BOOTH

--- a/VRChat/09/1066609.html
+++ b/VRChat/09/1066609.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "Dg0r4O5kigBkbgdkWAzU+M/n1pUy1TLLpeZSeb/a0lw="></script>
+    "A9pGhauIgCFEgxpa96WSQqUCN4wSU9Fg2hX/VuJFiqs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRCで使えるただの帽子","description":"VRC内での仕様を想定した750ポリゴンの帽子です\nハードな方もハーフな方も是非ご利用ください\n\n内容物：FBX・Blenderファイル・README.txt\n\n【免責事項】\n当モデルを使用した際、使用者側にいかなる不利益が発生した場合でも当方は一切責任を負いません。\n\n【許可事項】\nVRCでの使用、改変\n\n【禁止事項】\n特定の対象への嫌がらせなど他人に不快感を与える行為に使用することを固く禁じます\n\nご不明な点などあればこちらへご連絡ください\nTwitter：@sarena4649","url":"https://booth.pm/ja/items/1066609","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/30d611ee-0eda-4ac5-9e8d-4bc31c8a94dc/i/1066609/cec5b43b-c886-4cc8-ab06-d592190dd22f_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Dg0r4O5kigBkbgdkWAzU+M/n1pUy1TLLpeZSeb/a0lw="></script>
+    nonce="A9pGhauIgCFEgxpa96WSQqUCN4wSU9Fg2hX/VuJFiqs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -387,9 +387,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
