updated at: 2023-07-31 20:08, クリアカバー棺桶 - ネギ侍工房 - BOOTH

--- a/VRChat/74/1065074.html
+++ b/VRChat/74/1065074.html
@@ -79,7 +79,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "HRvkBIXPMGJTLCN3OMGLvc7stuIzftLys0CNA+BI6FI="></script>
+    "ZCcJPOB4e2CuW1OY5yR9uqQ7sI3FkbpgK80H6cJteAA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"クリアカバー棺桶","description":"こちらはVRChatを想定して作られた「クリアカバー棺桶」のFBXモデルです。\n\nモデルデータはunitypackage形式です。\n\n\n-----利用規約-----\n・素材そのものの再配布、及び販売は禁止とさせていただきます。\n・それ以外は原則自由に使っていただいて構いませんが、予告なく規約が変更になる可能性があります。\n・規約は常に商品紹介文に記載されているものを最新の規約とします。\n・当商品を購入、使用して発生したトラブル等に関して、当方は一切の責任を負いません。\n\n----------\n最終更新日：2018/10/23","url":"https://booth.pm/ja/items/1065074","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/7daba49c-946f-44ee-9363-049475872f48/i/1065074/6b2ed3e4-471b-45ad-868b-7dd66b5e12e4_base_resized.jpg"}
     </script>
@@ -93,7 +93,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="HRvkBIXPMGJTLCN3OMGLvc7stuIzftLys0CNA+BI6FI="></script>
+    nonce="ZCcJPOB4e2CuW1OY5yR9uqQ7sI3FkbpgK80H6cJteAA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -385,9 +385,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
