updated at: 2023-07-31 20:10, [VRChat向け] あるスライムのコート - MANKALO_Shop - BOOTH

--- a/VRChat/05/1064505.html
+++ b/VRChat/05/1064505.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "h3TsNQWIkSfKL9FYoNEPIgMvXwlog9LLsMeSOHJO4Fw="></script>
+    "MDGtOzi3NEyj3M6tIEePNnORYxEzktSG8CuMfwGymHE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[VRChat向け] あるスライムのコート","description":"本ファイルは、\n\n\nあるスライムのコートモデル。fbx\nテクスチャ.png\n法線マップ.png\n\n※スライムは含まれていません。\n\nが含まれているファイルです。使用時、規約を必ず守ってください。\n\n**********************************************\n\n1.変更許可。配布可能です。\n\n上記モデルの原型を変形したり、テクスチャを変更してもかまいません。\n\n2.商業用途に使用しないでください。\n\n商業目的とコミッション、転売、修正販売などを意味します。\n\n3.本モデルは、vrchatモデルのために製作されました。\n\nflat it toonシェーダを基準に製作されました。\n\n4.モデルに問題点が発見された場合、作成者のメールやディスコードのアカウントにご連絡ください。\n\nディスコード連絡が一番早いです。\n\nディスコード：Nyarr＃3915\n\nメールアドレス：Nyarr556@naver.com\n\n**********************************************\n\n\n製作者：ニャル（Nyarr）with KVCG","url":"https://booth.pm/ja/items/1064505","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/aff428fe-6d55-48b0-9192-d9022be6991f/i/1064505/9052be81-da5d-4e8c-b77b-23783195f042_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="h3TsNQWIkSfKL9FYoNEPIgMvXwlog9LLsMeSOHJO4Fw="></script>
+    nonce="MDGtOzi3NEyj3M6tIEePNnORYxEzktSG8CuMfwGymHE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -349,9 +349,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
