updated at: 2023-07-31 20:15, プレミアムわん子 - わんばんこ商店 - BOOTH

--- a/VRChat/89/1059789.html
+++ b/VRChat/89/1059789.html
@@ -80,7 +80,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "dPrYof1Rci8cQERppRCN7u/f3FpZ16UcQkqSA0YBGe0="></script>
+    "NDL6uASHkbWDGi4RMnWMzlFlw9Ah8BbQ+Kva+qoTJFo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"プレミアムわん子","description":"わんばんこー\n小咲南緒です\n今回は配布ではなく販売になります\nペロペロシェイプキーに加え、ぶちゅーシェイプキーを搭載\n更に、足に装備しているスコップを取り出すことができます\n\nVRCSDK\nCubed's Unity Shaders\nDynamicBone（有料）\nの3つのアセットを先にインポートしておくことをお勧めします\n\nリップシンク、目の追従＆瞬きは実装済みです\nうにちーパッケージをインポートしたら青い立方体のアイコン.prefabをヒエラルキー（画面左の枠）にドロップしてくださいね\n\n初期状態ではスカートはClothで動いています\nDynamicBoneの方がいいという方は、「外スカートCloth（Hipのボーン下にある）」と「内スカートウェイト」を非表示にして、「外スカート」「内スカート」を表示させてください。\n\n～～以下おやくそくです～～\n\n・グロテスクな表現はダメです\n・相手に恐怖を与える暴力的な表現も禁止です\n・守れない場合は小咲南緒からブロックされます\n・販売なので、再配布や再販売などが発覚した場合はおさわりまんに連絡します\n・エッチなのは公的な場では控えめにお願いします\n・このお約束は勝手に増えたり減ったりします\n・上記以外のことはまぁ、常識の範囲内でお願いします\n\n個人販売なので、不備や不具合が多いかと思いますが\nなにとぞご了承下さい\n連絡はTwitter＠KozakiNaoまで","url":"https://booth.pm/ja/items/1059789","offers":{"priceCurrency":"JPY","@type":"Offer","price":"700"},"image":"https://booth.pximg.net/c/620x620/d6a0764b-a914-4967-8f0d-496582bb28c4/i/1059789/a6d66761-a13f-4215-91ea-c647cabf6f78_base_resized.jpg"}
     </script>
@@ -94,7 +94,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="dPrYof1Rci8cQERppRCN7u/f3FpZ16UcQkqSA0YBGe0="></script>
+    nonce="NDL6uASHkbWDGi4RMnWMzlFlw9Ah8BbQ+Kva+qoTJFo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -417,9 +417,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
