updated at: 2023-07-31 20:15, [無料配布]まほうのほうき - AYWorks - BOOTH

--- a/VRChat/00/1059200.html
+++ b/VRChat/00/1059200.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "du7bU1wtZxpSiLt/NZl5sDmsQBIaGBJYRmFTRvjISms="></script>
+    "CN2+ou034EF7fd0mHQ7RKsrJSuOHL8OLUYbysnttcLg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[無料配布]まほうのほうき","description":"まほうのほうき　V1.0\n△324\n\n■はじめに\n本データは藍華藍葉（以下製作者）の制作した3Dモデルデータです\nVRChatでアバターに被らせることを想定していますが、他の用途でもご利用いただけます\n\n\n■内容物\nBroom.blend：blenderのプロジェクトデータ\nBroom.fbx：FBXファイル\nBroom.unitypackage：Unityのパッケージファイルです。テクスチャの設定がしてあります\ntBroom.png：テクスチャ\nReadme.txt：このファイルです。初めにお読みください\nuBroom.png：UV展開図です\nuBroom.psd：テクスチャの元ファイルをpsdファイルに変換したもの\nuBroom.sai2：テクスチャの元ファイル\n\n\n■制作に使用したソフトウェア\nBlender 2.79b\nPaintTool SAI Ver.2 (64bit) Preview.2018.05.26\nAdobe Photoshop CS6\nUnity 5.6.3p1 Personal (64bit)\n\n\n■改変について\n自由です\nお知らせいただくと製作者が見て喜ぶと思います\n\n\n■商用利用について\n可能です\n\n\n■禁止事項\n2次配布および転載を禁じます\n\n\n■履歴\n2018/10/19　初版　V1.0\n\n\n■問い合わせ先\nTwitter：@ay_c_\nPixiv：https://www.pixiv.net/member.php?id=146587\nDiscord：Carumba#2912\nVRChat：Carumba","url":"https://booth.pm/ja/items/1059200","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/60a161b7-c7bb-4fa2-8dc4-8ac298dd3e5f/i/1059200/7aa20929-e634-4176-ad18-fea777b5bf1f_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="du7bU1wtZxpSiLt/NZl5sDmsQBIaGBJYRmFTRvjISms="></script>
+    nonce="CN2+ou034EF7fd0mHQ7RKsrJSuOHL8OLUYbysnttcLg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -473,9 +473,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
